# pgslim

./: .gitignore  Makefile  README.md  bump_version.py  pyproject.toml
pgslim/: main.py
