[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgslim"
version = "0.2.1"
description = "A simple tool to reduce PostgreSQL dump size by nullifying large bytea/text columns."
readme = "README.md"
authors = [
    { name = "Huy Nguyen", email = "huy.ntq02@gmail.com" }
]
license = { text = "MIT" }
keywords = ["postgres", "sql", "dump", "slim", "size", "bytea"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.66.0",
    "InquirerPy>=0.3.4"
]

[project.scripts]
pgslim = "pgslim.main:main"

[tool.hatch.build.targets.wheel]
packages = ["pgslim"]

[tool.bumpver]
current_version = "0.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

